--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
-  text-align: center;
+.primaryFont {
+    font-family:'Amaranth',sans-serif;
+}
+.secondaryFont {
+    font-family:'Open Sans', sans-serif;
+}
+.secondaryBColor{
+    background:#FF7F50; /*orange*/
+    color: black;
+}
+.primaryBColor{
+    background:#D7E8F0; /*ligh blue*/
+    color: black;
+}
+.tertiaryBColor{
+    background:#555555; /*dark gray*/
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.close {
+    display: hidden;
+}
+.open{
+    display: block;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.lds-dual-ring {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.lds-dual-ring:after {
+  content: " ";
+  display: block;
+  width: 32px;
+  height: 32px;
+  margin: 4px;
+  border-radius: 50%;
+  border: 6px solid #fff;
+  border-color: #fff transparent #fff transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
+@keyframes lds-dual-ring {
+  0% {
     transform: rotate(0deg);
   }
-  to {
+  100% {
     transform: rotate(360deg);
   }
 }
