adding all the files

--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,14 @@
     transform: rotate(360deg);
   }
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbarHide::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.scrollbarHide {
+-ms-overflow-style: none;  /* IE and Edge */
+scrollbar-width: none;  /* Firefox */
+}
